--- a/Day3/index.html
+++ b/Day3/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="task4">
             <h2>Task 4</h2>
-            <p>Codekata Practice</p>
+            <p>Codekata Practice WIP</p>
         </div>
     </div>
 </body>
