--- a/Day3/index.html
+++ b/Day3/index.html
@@ -20,6 +20,7 @@
             <p>Solution: Please check console</p>
         </div>
         <div class="task3">
+            <!-- Task 3 -->
             <h2>Task 4</h2>
             <p>Read about the diffrence between window,scrren and document in javascript</p>
         </div>
